--- a/index.html
+++ b/index.html
@@ -221,11 +221,13 @@
     <section class="col-xs-12 col-sm-6 col-md-6">
       <h3>For more information and help</h3>
       <ul>
+        <li><a mailto="tor@openstack.eti.br">Tor@openstack.eti.br</a></li>
+        <!--
         <li><a href="https://developers.openshift.com">Developer Center</a></li>
         <li><a href="https://docs.openshift.com">Documentation</a></li>
         <li><a href="https://www.openshift.com/forums/openshift">OpenShift forums</a></li>
         <li><a href="http://stackoverflow.com/questions/tagged/openshift">Stack Overflow questions for OpenShift</a></li>
-        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4">IRC channel at #openshift on freenode.net</a></li>
+        <li><a href="http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4">IRC channel at #openshift on freenode.net</a></li> -->
       </ul>
     </section>
   </div> 
